// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Polymorphism > forcing implicits 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_10;
  return v0;
}

function closure_11(x) {
  return x;
}

function closure_10(a) {
  const v0 = closure_11;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_10
      return v0
  fn closure_11(x) entry=entry
    entry:
      return x
  fn closure_10(a) entry=entry
    entry:
      let v0 = &closure_11
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(t1: a) -> a",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = String;
  const v2 = v0(v1);
  const v3 = "hello";
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"forcedStr"}
[3] app {"icit":"Explicit"}
  :arg -> [9]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [8]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] var:free {"name":"String"}
[8] var:ref {"name":"String"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"String","value":"hello"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = String
      let v2 = call *v0(v1)
      let v3 = "hello"
      let v4 = call *v2(v3)
      return v4",
    "name": "forcedStr",
    "normalized": ""hello"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit parameters 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_10;
  return v0;
}

function closure_11(x) {
  return x;
}

function closure_10(a) {
  const v0 = closure_11;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_10
      return v0
  fn closure_11(x) entry=entry
    entry:
      return x
  fn closure_10(a) entry=entry
    entry:
      let v0 = &closure_11
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(t1: a) -> a",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = 42;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @Num 42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n2"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Atom","value":"Num"}}
[8] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = 42
      let v4 = call *v2(v3)
      return v4",
    "name": "n2",
    "normalized": "42",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = id;
  const v1 = "String";
  const v2 = v0(v1);
  const v3 = "hello";
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"s2"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"id"}
[6] var:ref {"name":"id"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Atom","value":"String"}}
[8] lit {"value":{"type":"String","value":"hello"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = id
      let v1 = String
      let v2 = call *v0(v1)
      let v3 = "hello"
      let v4 = call *v2(v3)
      return v4",
    "name": "s2",
    "normalized": ""hello"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit resolution with using 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(n: Num) => λ(x: Num) -> FFI.$add x n",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"addImplicit"}
[3] lambda {"variable":"n","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [14]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [13]
  :env -> [15]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:foreign {"name":"$add","arity":2}
[11] var:bound {"index":0}
  :next -> [12]
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[12] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[13] primop {"op":"$add"}
  :arg -> [11] {"index":0}
  :arg -> [12] {"index":1}
  :callee -> [9]
[14] env
[15] env
  :capture -> [3] {"index":0}
[16] closure
  :body -> [3]
  :env -> [14]
[17] closure
  :body -> [5]
  :env -> [15]",
    "ivl": "(forall ((n Real)) (forall ((x Real)) (and (= x x) (= n n))))",
    "kind": "let",
    "mir": "",
    "name": "addImplicit",
    "normalized": "λ(n: Num) => (closure: λ(x: Num) -> FFI.$add x n -| Γ: n)",
    "solverTrace": "=== Formula ===
  (forall ((n Real)) (forall ((x Real)) (and (= x x) (= n n))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  n=x -> residual
  n=n -> residual
  x=x -> residual
  x=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(n: Num) => Π(t1: Num) -> Num",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = addImplicit;
  const v1 = 10;
  const v2 = v0(v1);
  const v3 = 1;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "addImplicit @10 1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"eleven"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addImplicit"}
[6] var:ref {"name":"addImplicit"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Num","value":10}}
[8] lit {"value":{"type":"Num","value":1}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addImplicit
      let v1 = 10
      let v2 = call *v0(v1)
      let v3 = 1
      let v4 = call *v2(v3)
      return v4",
    "name": "eleven",
    "normalized": "11",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = addImplicit;
  const v1 = 10;
  const v2 = v0(v1);
  const v3 = 5;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "addImplicit @10 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"fifteen"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addImplicit"}
[6] var:ref {"name":"addImplicit"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Num","value":10}}
[8] lit {"value":{"type":"Num","value":5}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addImplicit
      let v1 = 10
      let v2 = call *v0(v1)
      let v3 = 5
      let v4 = call *v2(v3)
      return v4",
    "name": "fifteen",
    "normalized": "15",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Polymorphism > inference and generalization 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(x) {
  const v0 = 1;
  const v1 = (x + v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$add x 1 : Π(x: Num) ->
  <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"inc"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$add","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":1}}
[11] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "(and
  (forall ((x Real))
    (and
      (= x x)
      (forall ((x Real))
        (=>
          (= x x)
          (forall ((y Real))
            (=>
              (= y 1)
              (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
  (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(x) entry=entry
    entry:
      let v0 = 1
      let v1 = +(x, v0)
      return v1",
    "name": "inc",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 1 -| Γ: x)",
    "solverTrace": "=== Formula ===
  (and
    (forall ((x Real))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 1)
                (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
    (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=1 -> residual
  y=x -> residual
  y=1 -> residual
  r=x -> residual
  r=1 -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(x: Num) -> <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |]",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) =>
  λ(b: Type) =>
    (λ(x: a) -> (λ(y: b) -> x : Π(y: b) -> a) : Π(x: a) -> Π(y: b) -> a)",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"fst"}
[3] lambda {"variable":"a","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [13]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [14]
[8] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[9] lambda {"variable":"y","icit":"Explicit","level":4}
  :annotation -> [10]
  :body -> [11]
  :env -> [15]
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[11] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [9] {"level":4}
[12] env
[13] env
  :capture -> [3] {"index":0}
[14] env
  :capture -> [5] {"index":0}
[15] env
  :capture -> [7] {"index":0}
[16] closure
  :body -> [3]
  :env -> [12]
[17] closure
  :body -> [5]
  :env -> [13]
[18] closure
  :body -> [7]
  :env -> [14]
[19] closure
  :body -> [9]
  :env -> [15]",
    "ivl": "(forall ((a Type))
  (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))",
    "kind": "let",
    "mir": "",
    "name": "fst",
    "normalized": "λ(a: Type) =>
  (closure: λ(b: Type) =>
    (λ(x: a) -> (λ(y: b) -> x : Π(y: b) -> a) : Π(x: a) ->
      Π(y: b) -> a) -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type))
    (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  b=x -> residual
  x=x -> residual
  y=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) => Π(b: Type) => Π(x: a) -> Π(y: b) -> a",
  },
]
`;

exports[`Language Tour — Polymorphism > let-polymorphism in blocks 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_25;
  const innerID1 = v0;
  const v2 = "Num";
  const v3 = innerID1(v2);
  const v4 = 42;
  const v5 = v3(v4);
  const n6 = v5;
  const v7 = "String";
  const v8 = innerID1(v7);
  const v9 = "hi";
  const v10 = v8(v9);
  const s11 = v10;
  return n6;
}

function closure_26(x) {
  return x;
}

function closure_25(a) {
  const v0 = closure_26;
  return v0;
}
return main();
",
    "elaborated": "{
  let innerID
    : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; innerID; letpoly)
    = λ(a: Type) => (λ(x: a) -> x : Π(x: a) -> a);
  let n : Num = innerID @Num 42;
  let s : String = innerID @String "hi";
  return n;
}",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"letpoly"}
[3] block
  :return -> [22]
  :stmt -> [4] {"index":0}
  :stmt -> [10] {"index":1}
  :stmt -> [16] {"index":2}
[4] stmt:let {"variable":"innerID"}
  :next -> [10]
  :value -> [5]
[5] lambda {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [23]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [5] {"level":2}
[9] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[10] stmt:let {"variable":"n"}
  :next -> [16]
  :value -> [11]
[11] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [12]
[12] app {"icit":"Implicit"}
  :arg -> [14]
  :func -> [13]
[13] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
[14] lit {"value":{"type":"Atom","value":"Num"}}
[15] lit {"value":{"type":"Num","value":42}}
[16] stmt:let {"variable":"s"}
  :value -> [17]
[17] app {"icit":"Explicit"}
  :arg -> [21]
  :func -> [18]
[18] app {"icit":"Implicit"}
  :arg -> [20]
  :func -> [19]
[19] var:bound {"index":2}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [16] {"level":3}
[20] lit {"value":{"type":"Atom","value":"String"}}
[21] lit {"value":{"type":"String","value":"hi"}}
[22] var:bound {"index":1}
  :refers_to -> [10]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [10] {"level":2}
  :scope -> [16] {"level":3}
[23] env
[24] env
[25] closure
  :body -> [5]
  :env -> [23]
[26] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "(and
  (forall ((a Type)) (forall ((x Type)) (= x x)))
  (forall ((n Real)) (forall ((s String)) (= n n))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_25
      let innerID1 = v0
      let v2 = Num
      let v3 = call *innerID1(v2)
      let v4 = 42
      let v5 = call *v3(v4)
      let n6 = v5
      let v7 = String
      let v8 = call *innerID1(v7)
      let v9 = "hi"
      let v10 = call *v8(v9)
      let s11 = v10
      return n6
  fn closure_26(x) entry=entry
    entry:
      return x
  fn closure_25(a) entry=entry
    entry:
      let v0 = &closure_26
      return v0",
    "name": "letpoly",
    "normalized": "42",
    "solverTrace": "=== Formula ===
  (and
    (forall ((a Type)) (forall ((x Type)) (= x x)))
    (forall ((n Real)) (forall ((s String)) (= n n))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
  n=n -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Polymorphism > parametric polymorphism 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_10;
  return v0;
}

function closure_11(x) {
  return x;
}

function closure_10(a) {
  const v0 = closure_11;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) -> λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"id"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[7] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((a Type)) (forall ((x Type)) (= x x)))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_10
      return v0
  fn closure_11(x) entry=entry
    entry:
      return x
  fn closure_10(a) entry=entry
    entry:
      let v0 = &closure_11
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) -> (closure: λ(x: a) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type)) (forall ((x Type)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) -> Π(t1: a) -> a",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) -> λ(b: Type) -> λ(x: a) -> λ(y: b) -> x",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"const"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] lambda {"variable":"b","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [13]
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [8]
  :body -> [9]
  :env -> [14]
[8] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[9] lambda {"variable":"y","icit":"Explicit","level":4}
  :annotation -> [10]
  :body -> [11]
  :env -> [15]
[10] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
[11] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
  :scope -> [7] {"level":3}
  :scope -> [9] {"level":4}
[12] env
[13] env
  :capture -> [3] {"index":0}
[14] env
  :capture -> [5] {"index":0}
[15] env
  :capture -> [7] {"index":0}
[16] closure
  :body -> [3]
  :env -> [12]
[17] closure
  :body -> [5]
  :env -> [13]
[18] closure
  :body -> [7]
  :env -> [14]
[19] closure
  :body -> [9]
  :env -> [15]",
    "ivl": "(forall ((a Type))
  (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))",
    "kind": "let",
    "mir": "",
    "name": "const",
    "normalized": "λ(a: Type) -> (closure: λ(b: Type) -> λ(x: a) -> λ(y: b) -> x -| Γ: a)",
    "solverTrace": "=== Formula ===
  (forall ((a Type))
    (forall ((b Type)) (forall ((x Type)) (forall ((y Type)) (= x x)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  a=x -> residual
  b=x -> residual
  x=x -> residual
  y=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(a: Type) -> Π(b: Type) -> Π(t2: a) -> Π(t3: b) -> a",
  },
]
`;
